--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Lora|Source+Sans+Pro:400,700" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -22,18 +25,18 @@
 
         <!-- Add your site or application content here -->
         <section class="flex-container">
-            <header>Header</header>
-            <main>Main</main>
-            <div id="div-1" class="flex-items">
-                Div 1
+            <header>Hi. I'm Shonoa.</header>
+            <main>I'm a Responsive Designer & Developer who thrives on visual storytelling. When I'm not working, pursuing side projects or getting lost in the rabbit hole of blogs & books, I can be found traveling, hiking and searching for new stories.</main>
+            <div class="div-1">
+                <p>I was born and raised in the Southwest, but my real roots reach to the Navajo reservation. I owe my warm heart and steady mind to being an Indigenous woman weaving her way through the technological world in hopes to eventually give back to my people.</p>
             </div>
-            <div id="div-2" class="flex-items">
-                Div 2
+            <div class="div-2">
+                <p>My passion: I LOVE music - it's one of the most powerful and diverse methods for expression & communication. In the meantime, I get my fix by going to concerts and creating my own music.</p>
             </div>
-            <div id="div-3" class="flex-items">
-                Div 3
+            <div class="div-3">
+                <p>A fun fact: As a true Arizonan, I'm slightly embarrased to say that I only started hiking a year ago however I'm currently planning my first backpacking trip to the Grand Canyon in a couple months!</p>
             </div>
-            <footer>Footer</footer>
+            <footer>Contact me here!</footer>
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
